--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 .profile-card .card-footer {
-    background-color: #eb0808;
+    background-color: #fce095;
     padding: 20px;
     border-top: none;
 }
